--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -23334,5 +23334,13 @@
         "published": "Sat, 20 Dec 2025 13:20:57 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46335994\">Comments</a>"
+    },
+    {
+        "id": "https://blog.jcz.dev/gemini-3-pro-vs-25-pro-in-pokemon-crystal",
+        "title": "Gemini 3 Pro vs. 2.5 Pro in Pokemon Crystal",
+        "link": "https://blog.jcz.dev/gemini-3-pro-vs-25-pro-in-pokemon-crystal",
+        "published": "Tue, 16 Dec 2025 12:48:12 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46287848\">Comments</a>"
     }
 ]
