--- a/tech-news-frontend/public/knowledge_base.json
+++ b/tech-news-frontend/public/knowledge_base.json
@@ -23838,5 +23838,53 @@
         "published": "Sun, 21 Dec 2025 11:21:01 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46344022\">Comments</a>"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/21/israels-famed-vc-jon-medved-diagnosed-with-als-backed-the-tech-that-will-improve-his-life/",
+        "title": "Israel\u2019s famed VC Jon Medved, diagnosed with ALS, backed the tech that will improve his life",
+        "link": "https://techcrunch.com/2025/12/21/israels-famed-vc-jon-medved-diagnosed-with-als-backed-the-tech-that-will-improve-his-life/",
+        "published": "Sun, 21 Dec 2025 13:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "In perhaps the last public interview of one Israel's most famous VCs, Jon Medved tells TechCrunch how tech will enhance his life."
+    },
+    {
+        "id": "https://www.theverge.com/column/843418/humanoid-robot-hype",
+        "title": "Humanoid robots are coming. Eventually?",
+        "link": "https://www.theverge.com/column/843418/humanoid-robot-hype",
+        "published": "2025-12-21T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "This is The Stepback, a weekly newsletter breaking down one essential story from the tech world. For more on robotics and AI, follow Robert Hart. The Stepback arrives in our subscribers' inboxes at 8AM ET. Opt in for The Stepback here. We're taking a winter break! The Stepback will be back on January 11th, 2026. [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/848567/best-tech-movies-gadgets-2025-installer",
+        "title": "Our favorite stuff of 2025",
+        "link": "https://www.theverge.com/tech/848567/best-tech-movies-gadgets-2025-installer",
+        "published": "2025-12-21T08:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Hi, friends! Welcome to Installer No. 110, your guide to the best and Verge-iest stuff in the world. (If you're new here, welcome, happy holidays, and also you can read all the old editions at the Installer homepage.) This week, I've been reading about mall Santas and malleable software and phone bans, wondering how I [&#8230;]"
+    },
+    {
+        "id": "https://gizmodo.com/shark-facialpro-glow-review-can-you-really-get-a-professional-quality-facial-at-home-2000700560",
+        "title": "Shark FacialPro Glow Review: Can You Really Get a Professional-Quality Facial at Home?",
+        "link": "https://gizmodo.com/shark-facialpro-glow-review-can-you-really-get-a-professional-quality-facial-at-home-2000700560",
+        "published": "Sun, 21 Dec 2025 13:00:22 +0000",
+        "source": "Gizmodo",
+        "summary": "This quirky at-home facial device made my face glow for days."
+    },
+    {
+        "id": "https://www.zdnet.com/article/wing-walmart-drone-deliveries-atlanta/",
+        "title": "I saw a drone deliver pies in Atlanta, and it was an uncannily brilliant experience",
+        "link": "https://www.zdnet.com/article/wing-walmart-drone-deliveries-atlanta/",
+        "published": "Sun, 21 Dec 2025 13:00:47 GMT",
+        "source": "Latest news",
+        "summary": "Wing and Walmart's partnership has expanded to the metro Atlanta area, with other cities in its direct line of sight."
+    },
+    {
+        "id": "https://github.com/FOBshippingpoint/shittp",
+        "title": "Show HN: Shittp \u2013 Volatile Dotfiles over SSH",
+        "link": "https://github.com/FOBshippingpoint/shittp",
+        "published": "Sun, 21 Dec 2025 12:33:11 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46344381\">Comments</a>"
     }
 ]
