--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -24566,5 +24566,21 @@
         "published": "Mon, 22 Dec 2025 06:18:37 +0000",
         "source": "Digit.in",
         "summary": "\u0baa\u0bc1\u0ba4\u0bc1 \u0bb5\u0bb0\u0bc1\u0b9f\u0bae\u0bcd 2026 \u0b86\u0bae\u0bcd \u0b86\u0ba3\u0bcd\u0b9f\u0bc1 \u0baa\u0bbf\u0bb1\u0b95\u0bcd\u0b95 \u0baa\u0bcb\u0b95\u0bc1\u0ba4\u0bc1, \u0b85\u0bb0\u0b9a\u0bc1 \u0ba8\u0b9f\u0ba4\u0bcd\u0ba4\u0bbf \u0bb5\u0bb0\u0bc1\u0bae\u0bcd \u0b9f\u0bc6\u0bb2\u0bbf\u0b95\u0bbe\u0bae\u0bcd \u0ba8\u0bbf\u0bb1\u0bc1\u0bb5\u0ba9\u0bae\u0bbe\u0ba9 \u0baa\u0bbe\u0bb0\u0bcd\u0ba4\u0bcd \u0b9a\u0b9e\u0bcd\u0b9a\u0bbe\u0bb0\u0bcd \u0ba8\u0bbf\u0b95\u0bae\u0bcd \u0bb2\u0bbf\u0bae\u0bbf\u0b9f\u0bc6\u0b9f\u0bcd(BSNL) \u0b85\u0ba4\u0ba9\u0bcd \u0b95\u0bb8\u0bcd\u0b9f\u0bae\u0bb0\u0bcd\u0b95\u0bb3\u0bc1\u0b95\u0bcd\u0b95\u0bc1 1 \u0bb5\u0bb0\u0bc1\u0b9f \u0bb5\u0bc7\u0bb2\u0bbf\u0b9f\u0bbf\u0b9f\u0bcd\u0b9f\u0bbf \u0bb5\u0bb4\u0b99\u0bcd\u0b95\u0bc1\u0bae\u0bcd \u0ba4\u0bbf\u0b9f\u0bcd\u0b9f\u0ba4\u0bcd\u0ba4\u0bc8 \u0b95\u0bca\u0ba3\u0bcd\u0b9f\u0bc1\u0bb5\u0ba8\u0bcd\u0ba4\u0bc1\u0bb3\u0bcd\u0bb3\u0ba4\u0bc1 \u0b95\u0bc1\u0bb1\u0bc8\u0ba8\u0bcd\u0ba4 \u0bb5\u0bbf\u0bb2\u0bc8\u0baf\u0bbf\u0bb2\u0bcd 365 \u0ba8\u0bbe\u0b9f\u0bcd\u0b95\u0bb3\u0bcd \u0bb5\u0bc7\u0bb2\u0bbf\u0b9f\u0bbf\u0b9f\u0bcd\u0b9f\u0bbf \u0b85\u0ba9\u0bcd\u0bb2\u0bbf\u0bae\u0bbf\u0b9f\u0bc6\u0b9f\u0bcd \u0b95\u0bbe\u0bb2\u0bbf\u0b99\u0bcd \u0b9f\u0bc7\u0b9f\u0bcd\u0b9f\u0bbe \u0baa\u0bcb\u0ba9\u0bcd\u0bb1 \u0baa\u0bb2 \u0ba8\u0ba9\u0bcd\u0bae\u0bc8 \u0bb5\u0bb4\u0b99\u0bcd\u0b95\u0bc1\u0bae\u0bcd \u0bae\u0bc7\u0bb2\u0bc1\u0bae\u0bcd \u0ba8\u0bc0\u0b99\u0bcd\u0b95\u0bb3\u0bcd \u0b87\u0ba8\u0bcd\u0ba4 \u0ba4\u0bbf\u0b9f\u0bcd\u0b9f\u0ba4\u0bcd\u0ba4\u0bc8 1 \u0bae\u0bc1\u0bb1\u0bc8 \u0bb0\u0bc0\u0b9a\u0bcd\u0b9a\u0bbe\u0bb0\u0bcd\u0b9c\u0bcd \u0b9a\u0bc6\u0baf\u0bcd\u0ba4\u0bc1 1 \u0bb5\u0bb0\u0bc1\u0b9f\u0bae\u0bcd \u0bb5\u0bb0\u0bc8 \u0ba8\u0bbf\u0bae\u0bcd\u0bae\u0ba4\u0bbf\u0baf\u0bbe\u0b95 \u0b87\u0bb0\u0bc1\u0b95\u0bcd\u0b95\u0bb2\u0bbe\u0bae\u0bcd \u0b85\u0ba8\u0bcd\u0ba4 \u0bb5\u0b95\u0bc8\u0baf\u0bbf\u0bb2\u0bcd \u0b87\u0ba8\u0bcd\u0ba4 \u0ba4\u0bbf\u0b9f\u0bcd\u0b9f\u0ba4\u0bcd\u0ba4\u0bbf\u0ba9\u0bcd \u0bb5\u0bbf\u0bb2\u0bc8 \u0bb0\u0bc2,2399 [&#8230;]"
+    },
+    {
+        "id": "https://yourstory.com/2025/12/new-york-bengaluru-startup-hyperbots-agentic-ai-native-co-pilots-automate-core-finance-workflows",
+        "title": "This startup is building AI agents that think like finance teams",
+        "link": "https://yourstory.com/2025/12/new-york-bengaluru-startup-hyperbots-agentic-ai-native-co-pilots-automate-core-finance-workflows",
+        "published": "Mon, 22 Dec 2025 00:30:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Founded by Rajeev Pathak, Niyati Chhaya, and Ram Jayaraman, Hyperbots offers agentic AI-native co-pilots that automate core finance workflows such as procure-to-pay, order-to-cash, expense management, analytics, and other processes."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/a-time-machine-roundtable-looking-back-at-indias-startup-journey",
+        "title": "A time machine roundtable: Looking back at India\u2019s startup journey",
+        "link": "https://yourstory.com/2025/12/a-time-machine-roundtable-looking-back-at-indias-startup-journey",
+        "published": "Sun, 21 Dec 2025 02:10:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "In this special year-end episode of the Prime Venture Partners podcast, four Partners at Prime take a step back and look at the journey from the early days of 2010 to where we are today and what lies ahead shaped by nearly two decades of building and investing in Indian startups."
     }
 ]
