--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -24582,5 +24582,53 @@
         "published": "Sun, 21 Dec 2025 02:10:00 GMT",
         "source": "YourStory RSS Feed",
         "summary": "In this special year-end episode of the Prime Venture Partners podcast, four Partners at Prime take a step back and look at the journey from the early days of 2010 to where we are today and what lies ahead shaped by nearly two decades of building and investing in Indian startups."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/anand-varadarajan-the-new-starbucks-tech-chief-is-an-amazon-veteran/articleshow/126116630.cms",
+        "title": "Anand Varadarajan, the new Starbucks tech chief, is an Amazon veteran",
+        "link": "https://economictimes.indiatimes.com/tech/technology/anand-varadarajan-the-new-starbucks-tech-chief-is-an-amazon-veteran/articleshow/126116630.cms",
+        "published": "Mon, 22 Dec 2025 12:31:47 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Starbucks has appointed Amazon veteran Anand Varadarajan as its new CTO to spearhead a significant technology revamp aimed at reviving declining sales. Varadarajan, who previously led tech and supply chain operations for Amazon's grocery business, will oversee Starbucks' AI push and technology initiatives."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/funding/wealthtech-startup-powerupmoney-secures-12-million-funding-from-peak-xv-partners-others/articleshow/126116129.cms",
+        "title": "Wealthtech startup PowerUp Money secures $12 million funding from Peak XV Partners, others",
+        "link": "https://economictimes.indiatimes.com/tech/funding/wealthtech-startup-powerupmoney-secures-12-million-funding-from-peak-xv-partners-others/articleshow/126116129.cms",
+        "published": "Mon, 22 Dec 2025 12:01:08 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Accel, Kae Capital and Blume Ventures have also participated in the round, taking the total amount raised by the company since inception to around $19 million."
+    },
+    {
+        "id": "https://yourstory.com/2025/12/how-women-entrepreneurs-are-redefining-indias-luxury-industry",
+        "title": "How women entrepreneurs are redefining India's luxury industry",
+        "link": "https://yourstory.com/2025/12/how-women-entrepreneurs-are-redefining-indias-luxury-industry",
+        "published": "Sun, 21 Dec 2025 02:15:00 GMT",
+        "source": "YourStory RSS Feed",
+        "summary": "Women entrepreneurs are reshaping the idea of luxury by combining heritage and craftsmanship with modern sensibilities."
+    },
+    {
+        "id": "https://www.digit.in/hi/news/mobile-phones/samsung-galaxy-z-fold-6-price-drop-by-55000-on-amazon-deal-features.html",
+        "title": "\u090f\u0915 \u091d\u091f\u0915\u0947 \u092e\u0947\u0902 55000 \u0930\u0941\u092a\u092f\u0947 \u0917\u093f\u0930 \u0917\u092f\u093e \u0907\u0938 Samsung \u092b\u094b\u0928 \u0915\u093e \u0926\u093e\u092e, \u092b\u0940\u091a\u0930\u094d\u0938 \u0926\u0947\u0916 \u0924\u0941\u0930\u0902\u0924 \u0916\u0930\u0940\u0926\u0928\u0947 \u0926\u094c\u095c\u0947\u0902\u0917\u0947",
+        "link": "https://www.digit.in/hi/news/mobile-phones/samsung-galaxy-z-fold-6-price-drop-by-55000-on-amazon-deal-features.html",
+        "published": "Mon, 22 Dec 2025 06:36:16 +0000",
+        "source": "Digit.in",
+        "summary": "\u091c\u092c \u092b\u094b\u0932\u094d\u0921\u0947\u092c\u0932 \u0938\u094d\u092e\u093e\u0930\u094d\u091f\u092b\u094b\u0928\u094d\u0938 \u0915\u0940 \u092c\u093e\u0924 \u0906\u0924\u0940 \u0939\u0948 \u0924\u094b Samsung Galaxy Z Fold 6 \u092c\u093e\u095b\u093e\u0930 \u092e\u0947\u0902 \u0938\u092c\u0938\u0947 \u0905\u091a\u094d\u091b\u0947 \u0921\u093f\u0935\u093e\u0907\u0938\u0947\u091c \u0915\u0947 \u0924\u094c\u0930 \u092a\u0930 \u0938\u093e\u092e\u0928\u0947 \u0906\u0924\u093e \u0939\u0948. \u092f\u0939 \u092b\u094b\u0928 \u092a\u093f\u091b\u0932\u0947 \u0938\u093e\u0932 \u092d\u093e\u0930\u0924 \u092e\u0947\u0902 \u0932\u0949\u0928\u094d\u091a \u0939\u0941\u0906 \u0925\u093e. \u091c\u094b \u091a\u0940\u095b \u0907\u0938\u0947 \u0906\u091c \u092d\u0940 \u090f\u0915 \u0926\u092e\u0926\u093e\u0930 \u0911\u092a\u094d\u0936\u0928 \u092c\u0928\u093e\u0924\u0940 \u0939\u0948 \u0935\u0939 \u0939\u0948 \u0907\u0938\u0915\u093e \u0938\u094d\u0928\u0948\u092a\u0921\u094d\u0930\u0948\u0917\u0928 \u092a\u094d\u0930\u094b\u0938\u0947\u0938\u0930 \u0914\u0930 \u090f\u0915 \u0910\u0938\u093e \u0915\u0948\u092e\u0930\u093e \u0938\u093f\u0938\u094d\u091f\u092e \u091c\u094b \u0938\u092c\u0938\u0947 [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/kn/news/telecom/bsnl-has-launched-a-christmas-bonanza-offering-unlimited-calls-and-data-for-only-1-for-a-limited-period.html",
+        "title": "BSNL Christmas Offer: \u0cac\u0cbf\u0c8e\u0cb8\u0ccd\u0c8e\u0ca8\u0ccd\u0c8e\u0cb2\u0ccd \u0caa\u0ccd\u0cb0\u0cbf\u0caf\u0cb0\u0cbf\u0c97\u0cc6 \u0cad\u0cb0\u0ccd\u0c9c\u0cb0\u0cbf \u0c97\u0cc1\u0ca1\u0ccd\u200c \u0ca8\u0ccd\u0caf\u0cc2\u0cb8\u0ccd!\u200c \u0c95\u0cc7\u0cb5\u0cb2 \u20b91 \u0cb0\u0cc2\u0c97\u0cb3 \u0c9c\u0cac\u0cb0\u0ca6\u0cb8\u0ccd\u0ca4\u0ccd \u0c86\u0cab\u0cb0\u0ccd \u0caa\u0cb0\u0cbf\u0c9a\u0caf!",
+        "link": "https://www.digit.in/kn/news/telecom/bsnl-has-launched-a-christmas-bonanza-offering-unlimited-calls-and-data-for-only-1-for-a-limited-period.html",
+        "published": "Mon, 22 Dec 2025 06:33:08 +0000",
+        "source": "Digit.in",
+        "summary": "BSNL Christmas Offer: \u0cb8\u0cb0\u0ccd\u0c95\u0cbe\u0cb0\u0cbf \u0cb8\u0ccd\u0cb5\u0cbe\u0cae\u0ccd\u0caf\u0ca6 \u0c9f\u0cc6\u0cb2\u0cbf\u0c95\u0cbe\u0c82 \u0c86\u0caa\u0cb0\u0cc7\u0c9f\u0cb0\u0ccd \u0cad\u0cbe\u0cb0\u0ca4\u0ccd \u0cb8\u0c82\u0c9a\u0cbe\u0cb0\u0ccd \u0ca8\u0cbf\u0c97\u0cae\u0ccd \u0cb2\u0cbf\u0cae\u0cbf\u0c9f\u0cc6\u0ca1\u0ccd (BSNL) \u0cad\u0cbe\u0cb0\u0ca4\u0ca6\u0cbe\u0ca6\u0ccd\u0caf\u0c82\u0ca4 \u0ca4\u0ca8\u0ccd\u0ca8 \u0cac\u0cb3\u0c95\u0cc6\u0ca6\u0cbe\u0cb0\u0cb0\u0cbf\u0c97\u0cbe\u0c97\u0cbf \u0cb5\u0cbf\u0cb6\u0cc7\u0cb7 \u0c95\u0ccd\u0cb0\u0cbf\u0cb8\u0ccd\u200c\u0cae\u0cb8\u0ccd \u0cac\u0cca\u0ca8\u0cbe\u0ca8\u0ccd\u0c9c\u0cbe \u0c95\u0cca\u0ca1\u0cc1\u0c97\u0cc6\u0caf\u0ca8\u0ccd\u0ca8\u0cc1 \u0cac\u0cbf\u0ca1\u0cc1\u0c97\u0ca1\u0cc6 \u0cae\u0cbe\u0ca1\u0cbf\u0ca6\u0cc6. \u0c95\u0ccd\u0cb0\u0cbf\u0cb8\u0ccd\u0cae\u0cb8\u0ccd \u0cb9\u0cac\u0ccd\u0cac\u0ca6 \u0c86\u0c9a\u0cb0\u0ca3\u0cc6\u0caf \u0cad\u0cbe\u0c97\u0cb5\u0cbe\u0c97\u0cbf BSNL \u0c95\u0cc7\u0cb5\u0cb2 \u20b91 \u0cb0\u0cc2\u0caa\u0cbe\u0caf\u0cbf\u0c97\u0cc6 \u0c85\u0ca8\u0cbf\u0caf\u0cae\u0cbf\u0ca4 \u0c95\u0cb0\u0cc6 \u0cae\u0ca4\u0ccd\u0ca4\u0cc1 \u0ca1\u0cc7\u0c9f\u0cbe \u0caa\u0ccd\u0cb0\u0caf\u0ccb\u0c9c\u0ca8\u0c97\u0cb3\u0ca8\u0ccd\u0ca8\u0cc1 \u0ca8\u0cc0\u0ca1\u0cc1\u0ca4\u0ccd\u0ca4\u0cbf\u0ca6\u0cc6. \u0c87\u0ca6\u0cc1 \u0caa\u0ccd\u0cb0\u0cb8\u0ccd\u0ca4\u0cc1\u0ca4 \u0cb2\u0cad\u0ccd\u0caf\u0cb5\u0cbf\u0cb0\u0cc1\u0cb5 \u0c85\u0ca4\u0ccd\u0caf\u0c82\u0ca4 \u0c95\u0cc8\u0c97\u0cc6\u0c9f\u0cc1\u0c95\u0cc1\u0cb5 \u0c85\u0cb2\u0ccd\u0caa\u0cbe\u0cb5\u0ca7\u0cbf\u0caf \u0c9f\u0cc6\u0cb2\u0cbf\u0c95\u0cbe\u0c82 \u0c95\u0cca\u0ca1\u0cc1\u0c97\u0cc6\u0c97\u0cb3\u0cb2\u0ccd\u0cb2\u0cbf \u0c92\u0c82\u0ca6\u0cbe\u0c97\u0cbf\u0ca6\u0cc6. \u0c88 \u0cb8\u0cc0\u0cae\u0cbf\u0ca4 \u0c85\u0cb5\u0ca7\u0cbf\u0caf \u0c92\u0caa\u0ccd\u0caa\u0c82\u0ca6\u0cb5\u0cc1 \u0c95\u0ccd\u0cb0\u0cbf\u0cb8\u0ccd\u200c\u0cae\u0cb8\u0ccd \u0cb8\u0cae\u0caf\u0ca6\u0cb2\u0ccd\u0cb2\u0cbf \u0c97\u0ccd\u0cb0\u0cbe\u0cb9\u0c95\u0cb0\u0ca8\u0ccd\u0ca8\u0cc1 \u0cb8\u0c82\u0ca4\u0ccb\u0cb7\u0caa\u0ca1\u0cbf\u0cb8\u0cc1\u0cb5 \u0cae\u0ca4\u0ccd\u0ca4\u0cc1 BSNL \u0ca8\u0cc6\u0c9f\u0ccd\u200c\u0cb5\u0cb0\u0ccd\u0c95\u0ccd\u200c\u0c97\u0cc6 [&#8230;]"
+    },
+    {
+        "id": "https://www.digit.in/features/general/chatgpt-and-gemini-sound-like-humans-for-one-very-simple-reason.html",
+        "title": "ChatGPT and Gemini sound like humans for one very simple reason",
+        "link": "https://www.digit.in/features/general/chatgpt-and-gemini-sound-like-humans-for-one-very-simple-reason.html",
+        "published": "Mon, 22 Dec 2025 06:25:56 +0000",
+        "source": "Digit.in",
+        "summary": "When you open a chat window with Gemini or ChatGPT, the experience feels strangely personal. You ask a question, and the artificial intelligence responds with phrases like \u201cI think,\u201d \u201cI feel,\u201d or \u201cI\u2019m sorry.\u201d The use of first-person language is so natural that it is easy to momentarily forget you are not talking to a [&#8230;]"
     }
 ]
